[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/games/race_overlay.gd" type="Script" id=1]

[node name="race_overlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -32.0
margin_right = 164.0
margin_bottom = 32.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 161.0
margin_bottom = 109.0
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 20.0
margin_right = 144.0
margin_bottom = 82.0
custom_constants/vseparation = 10
custom_constants/hseparation = 8
columns = 2

[node name="LabelGold" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_right = 45.0
margin_bottom = 14.0
text = "Gold"

[node name="Gold" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 53.0
margin_right = 134.0
margin_bottom = 14.0
text = "Gold time"

[node name="LabelSilver" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 24.0
margin_right = 45.0
margin_bottom = 38.0
text = "Silver"

[node name="Silver" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 53.0
margin_top = 24.0
margin_right = 134.0
margin_bottom = 38.0
text = "Silver Time"

[node name="LabelBronze" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 48.0
margin_right = 45.0
margin_bottom = 62.0
text = "Bronze"

[node name="Bronze" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 53.0
margin_top = 48.0
margin_right = 134.0
margin_bottom = 62.0
text = "Bronze Time"
